Modified css on connect form to fix field spacing bug.

--- a/src/Connect/Connect.module.scss
+++ b/src/Connect/Connect.module.scss
@@ -7,11 +7,11 @@
     font-size: 1.25rem;
   }
   .fieldContainer {
-    height: 4.2rem;
+    height: 6rem;
     margin: 1rem 0;
   }
   .fieldContainer input {
-    padding-top: 1.2rem;
+    padding-top: 1rem;
   }
   .fieldLabel {
     font-size: 1rem;
@@ -36,22 +36,22 @@
 
 @media screen and (min-width: 769px) and (max-width: 1215px) {
   .form {
-    height: 25rem;
-    width: 15rem;
+    height: 30rem;
+    width: 20rem;
     font-size: 1.25rem;
   }
   .fieldContainer {
-    height: 4.2rem;
+    height: 6rem;
     margin: 1rem 0;
   }
   .fieldContainer input {
-    padding-top: 1.2rem;
+    padding-top: 1rem;
   }
   .fieldLabel {
     font-size: 1rem;
   }
   .messageContainer {
-    height: 15rem;
+    height: 20rem;
     margin: 4rem 0;
   }
   .messageLabel {
